# rembrandt-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  backlog.md  changelog.md  docker-compose.yml  pyproject.toml  roadmap.md
.claude/: settings.json
.claude/commands/: i18n-review.md  improvements.md  optimize.md  refactor.md  self-refinement.md  ux-improvements.md
.claude/hooks/: pre-commit-tests.sh
.claude/rules/: backlog.md  committing.md  found-issues.md  improvement-areas.md  improvements.md  optimization-areas.md  optimization.md  refactoring-areas.md  refactoring.md  shell.md  telegram_design.md  testing.md  ux_review.md  versioning.md
.claude/skills/i18n-review/: SKILL.md
.pre-commit-scripts/: check_changelog_headers.sh  check_no_nul_bytes.sh  check_version_changelog.sh
changelog/: 2026.md
data/: data_science.csv  lessons.json  machine_learning.csv  nlp.csv  topics.json  user_state.json  vocab.csv  vocab.json
scripts/: backup_db.py  build_vocab.py  changelog-add.sh  load_all_translations.py  load_english_translations.py  migrate_topics.py  pre-commit.sh
src/rembrandt_chat/: __init__.py  _helpers.py  bot.py  config.py  formatting.py  handlers.py  i18n.py  persistence.py  session_handlers.py  stats_handlers.py  topic_translations.py  user_mapping.py  word_handlers.py
tests/unit/: conftest.py  test_backup_db.py  test_bot.py  test_config.py  test_formatting.py  test_handlers.py  test_persistence.py  test_topic_translations.py  test_user_mapping.py  test_word_handlers.py
(+1 files in other folders)
